# cdpmd

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
cdpmd/: agent.py  fhir_client.py  schemas.py  utils.py
cdpmd/ui/: about_page.py  about_patient.py  auth_home.py  card.py  cards.py  contact_page.py  header.py  loader.py  ordinary_home.py  patient_first_space_content.py  patient_row.py  patient_space.py  patient_space_content.py  patients_list.py  privacy_policy_page.py  task_bar.py  task_card.py  terms_of_service_page.py
